--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -78,17 +78,16 @@
               </ul>
             </ul>
 
-            
-            <!--Menu Inmuebles-->
-            <li class="sidebar-item">
+            <!--Inmuebles-->
+            <ul id="gestioncliente" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
 
-              <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionInmuebles" data-bs-toggle="collapse"
+              <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#inmueble" data-bs-toggle="collapse"
                 aria-expanded="false">
-                <i class="bi bi-person-lines-fill"></i> Gestion Inmuebles
+                <i class="bi bi-person-fill"></i>
+                Inmueble
               </a>
 
-              <!--Inmuebles-->
-              <ul id="gestionInmuebles" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+              <ul id="inmueble" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
                 <li class="sidebar-item">
                   <a href="{% url 'crearInmueble' %}" class="sidebar-link mx-4"> <i class="bi bi-plus"></i> Crear</a>
                 </li>
@@ -97,25 +96,8 @@
                   <a href="{% url 'listarInmuebles' %}" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Buscar</a>
                 </li>
               </ul>
-            </li>
-            {% comment %} <ul id="gestioncliente" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
-
-              <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#inmueble" data-bs-toggle="collapse"
-                aria-expanded="false">
-                <i class="bi bi-house-fill"></i>
-                Inmueble
-              </a>
-
-              <ul id="inmueble" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
-                <li class="sidebar-item">
-                  <a href="#" class="sidebar-link mx-4"><i class="bi bi-plus"></i> Crear</a>
-                </li>
-                <li class="sidebar-item">
-                  <a href="#" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Buscar</a>
-                </li>
-              </ul>
             </ul>
-          </li> {% endcomment %}
+          </li> 
 
           <!-- Menu productos -->
           <li class="sidebar-item">
