--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -104,10 +104,10 @@
           <li class="sidebar-item">
             <a href="#" class="sidebar-link collapsed" data-bs-target="#pages" data-bs-toggle="collapse"
               aria-expanded="false">
-              <i class="bi bi-file-earmark"></i>Pages</a>
+              <i class="bi bi-file-earmark"></i>Gestion Tipos de servicio</a>
             <ul id="pages" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
               <li class="sidebar-item">
-                <a href="#" class="sidebar-link">Page 1</a>
+                <a href="#" class="sidebar-link">Registrar tipo de servicio</a>
               </li>
               <li class="sidebar-item">
                 <a href="#" class="sidebar-link">Page 2</a>
