cargar categoria y empleado

--- a/core/templates/empleado/empleado_form.html
+++ b/core/templates/empleado/empleado_form.html
@@ -48,6 +48,11 @@
                             {{ form.cuil }}
                             {{ form.cuil.errors }}
                         </div>
+                        <div class="form-group mb-3">
+                            {{ form.categoria.label }}
+                            {{ form.categoria }}
+                            {{ form.categoria.errors }}
+                        </div>
                         </div>
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-primary btn-block text-white">{{ boton1 }}</button>
