--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -79,6 +79,26 @@
               </ul>
             </ul>
 
+            <!--Categorias-->
+            <ul id="gestionempleado" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+
+              <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#categoria" data-bs-toggle="collapse"
+                aria-expanded="false">
+                <i class="bi bi-person-fill"></i>
+                Categorias
+              </a>
+
+              <ul id="categoria" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+                <li class="sidebar-item">
+                  <a href="{% url 'crearCategoria' %}" class="sidebar-link mx-4"> <i class="bi bi-plus"></i> Crear</a>
+                </li>
+                
+                <li class="sidebar-item">
+                  <a href="{% url 'listarCategoria' %}" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Buscar</a>
+                </li>
+              </ul>
+            </ul>            
+
           </li>   
 
           <!-- Menu clientes -->
@@ -109,11 +129,6 @@
               </ul>
             </ul>
 
-<<<<<<< HEAD
-          </li>   
-        
-=======
->>>>>>> origin/desarrollo
             <!--Inmuebles-->
             <ul id="gestioncliente" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
 
@@ -135,9 +150,7 @@
             </ul>
           </li> 
 
-<<<<<<< HEAD
-
-=======
+         
           <!-- Menu productos -->
           <li class="sidebar-item">
 
@@ -156,10 +169,10 @@
                 <a href="{% url 'listarProductos' %}" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Buscar</a>
               </li>
             </ul>
->>>>>>> origin/desarrollo
+
           </li>
           
-
+          
 
 
           <!--Menu con caida cascada-->
