--- a/core/templates/inmuebles/inmueble_list.html
+++ b/core/templates/inmuebles/inmueble_list.html
@@ -43,7 +43,7 @@
                                     <td>{{i.metrosCuadrados}}</td>
                                     <td>{{i.nroAmbientes}}</td>
                                     <td>{{i.tipo}}</td>
-                                    <td>{{i.cliente.cuil_cuit}}</td>
+                                    <td>{{i.cliente}}</td>
                                     <td>
                                         <button onclick="abrir_modal_edicion('{% url "modificarInmueble" i.pk %}')" class="btn mx-2 mb-2 btn-sm btn-primary">Modificar</button>
                                         {% comment %} <a href="/infoCliente/{{c.cuil_cuit}}" class="btn mx-2 mb-2 btn-sm btn-primary">Eliminar</a>
