--- a/core/templates/clientes/cliente_list.html
+++ b/core/templates/clientes/cliente_list.html
@@ -72,17 +72,22 @@
                         </table>
                     </div>
 
+
+
     </div>
+
+
+
     {% endblock %}
     {% endif %}
 
-    <div class="modal" id="modal" role="dialog">
-        
-    </div>
+    {% block modal %}
 
+        <div class="modal" id="modal" role="dialog">
+            
+        </div>
 
-
-
+    {% endblock %}
 
 {% block extrajs %}
 <!--Modal-->
