--- a/core/templates/clientes/cliente_form.html
+++ b/core/templates/clientes/cliente_form.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %}
+{% extends "../baseform.html" %}
 {% load static %}
 {% load crispy_forms_tags %} <!--Crispy PONER SI O SI-->
 
@@ -6,29 +6,11 @@
     <h4 class="mx-3">{{ titulo }}</h4>
 {% endblock %}
 
-{% block cmain %}
+<!--Titulo del formulario-->
+{% block tblock %} {{ titulo }} {% endblock %}
 
-<div class="col-12 col-md-7 mx-auto">
-    <div class="card flex-fill border-0">
-        <div class="card-body py-4">
-            
-            <h4>{{ titulo }}</h4>
-            <div class="card">
-                <div class="card-body">
+<!--Url del formulario-->
+{% block url %} {% url 'crearCliente' %} {% endblock %}
 
-                    <form action="{% url 'crearCliente' %}" method="POST">
-                        {% csrf_token %}
-                        {{ form | crispy }}
-
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-block text-white">{{ boton1 }}</button>
-                        </div>
-                     </form>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-{% endblock %}
+<!--Boton del formulario-->
+{% block tboton %} {{ boton1 }} {% endblock %}
