--- a/core/templates/inmuebles/inmueble_list.html
+++ b/core/templates/inmuebles/inmueble_list.html
@@ -25,7 +25,7 @@
 
                 <div class="d-flex align-items-start">
                     <div class="flex-grow-1 table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-striped {% if filtros %} sortable{% endif %}">
                             <thead>
                                 <tr class="table-primary">
                                     <th>#</th>
