--- a/core/templates/baseform.html
+++ b/core/templates/baseform.html
@@ -30,7 +30,7 @@
                                 {% csrf_token %} {{ form | crispy }}
         
                                 <div class="d-grid gap-2">
-                                    <button type="submit" class="btn btn-primary btn-block text-white">{% block tboton %} {% endblock %}</button>
+                                    <button type="submit" class="btn btn-primary btn-block text-white">{% block btnform%} {% endblock %}</button>
                                 </div>
                             </form>
                             
