--- a/core/templates/inmuebles/inmueble_modal.html
+++ b/core/templates/inmuebles/inmueble_modal.html
@@ -1,19 +1,13 @@
-{% load crispy_forms_tags %}
+{% extends "basemodal.html" %}
 
-<div class="modal-dialog"  role="document">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h4 class="mx-3">Edicion del Inmueble de: {{ object.cliente }}</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <form action="{% url 'modificarInmueble' object.domicilio %}" method="POST">
-        {% csrf_token %} 
-        <div class="modal-body">
-            {{ form | crispy }} 
-        </div>
-        <div class="modal-footer">
-            <button type="submit" class="btn {{btnColor}}">{{boton}}</button>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        </div> 
-    </div>
-  </div>
+<!--Titulo del modal-->
+{% block tmodal %} Edicion del Inmueble de: {% endblock %}
+
+<!--Objeto del titulo del modal-->
+{% block tobjectmodal %} {{object.cliente}} {% endblock %}
+
+<!--Url del modal-->
+{% block url %} {% url 'modificarInmueble' object.domicilio %} {% endblock %}
+
+<!--Boton del modal-->
+{% block btnmodal %} Guardar {% endblock %} 
