--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -307,6 +307,7 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 
+  <script src="{% static 'js/custom-inlines.js' %}"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
 
   {% block extrajs %}
