--- a/servicios/templates/tiposServicios/tipoServicio_modal.html
+++ b/servicios/templates/tiposServicios/tipoServicio_modal.html
@@ -1,19 +1,21 @@
 {% load crispy_forms_tags %}
 
-<div class="modal-dialog modal-lg"  role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Edicion Tipo servicio: {{ object }}</h4>
-        <button type="button" class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
+<div class="modal-dialog modal-lg" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h4 class="modal-title">Edicion Tipo servicio: {{ object }}</h4>
+      <button type="button" class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
       <form action="{% url 'servicios:modificarTipoServicio' object.codigo %}" method="POST">
         {% csrf_token %}
-        <div class="modal-body">
-            {{ form | crispy }}
+        {% crispy form form.helper %}
+        <div data-formset="tipoServicio_producto" id="productos" class="">
+          {% crispy tipoServicio_producto_formset tipoServicio_producto_formset_helper %}
         </div>
-          <div class="modal-footer">
-        <button type="submit" class="btn {{btnColor}}">{{boton}}</button>
+        <button type="submit" class="btn {{ btnColor }}">{{ boton }}</button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          </form>
-    </div>endaServices
+      </form>
+    </div>
   </div>
+</div>
