productos: heredando de templates base para creacion y modificacion y listado + filtrado y paginacion

--- a/core/templates/core/producto_form.html
+++ b/core/templates/core/producto_form.html
@@ -1,36 +1,10 @@
-{% extends "../base.html" %}
-{% load static %}
-{% load crispy_forms_tags %}
+{% extends "../baseform.html" %}
 
+<!--Titulo del formulario-->
+{% block tform %} Crear Producto {% endblock %}
 
-{% block title %} {{ titulo }} {% endblock %}
+<!--Url del formulario-->
+{% block url %} {% url 'crearProducto' %} {% endblock %}
 
-{% block tmain %}
-    <h4 class="mx-3">{{ titulo }}</h4>
-{% endblock %}
-
-{% block cmain %}
-    <div class="col-12 col-md-7 mx-auto">
-        <div class="card flex-fill border-0">
-            <div class="card-body py-4">
-                
-                {% for msg in messages %}
-
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <strong>Hey!</strong> {{ msg }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                    
-                {% endfor %}
-                <h4>{{ titulo }}</h4>
-                <div class="card">
-                    <div class="card-body">
-
-                        {% crispy form form.helper %}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-{% endblock %}
+<!--Boton del formulario-->
+{% block btnform %} Guardar {% endblock %}
