Productos: manejando baja logica

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -106,7 +106,7 @@
 
             <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionProductos" data-bs-toggle="collapse"
               aria-expanded="false">
-              <i class="bi bi-person-lines-fill"></i> Gestion Productos
+              <i class="bi bi-box-seam"></i> Gestion Productos
             </a>
 
             <!--Productos-->
